# TRAK

./: CMakeLists.txt
assets/cyborg/: scene.gltf
assets/fountain_base/: scene.gltf
assets/la_night_city/: scene.gltf
shaders/: bokeh.frag  dof.frag  final.frag  fullscreen.frag  fullscreen.vert  highlight.frag  scene3d.frag  scene3d.vert  screen.frag
src/: Application.cpp  Application.h  Renderer.cpp  Renderer.h  Shader.cpp  Shader.h  main.cpp
src/core/: Camera.cpp  Camera.h
src/loader/: SceneLoader.cpp  SceneLoader.h  tinygltf_impl.cpp
src/scene/: Scene.h  SceneObject.h
